--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-this is some text
+<html>
+ <head>
+  <link rel="stylesheet" type="text/css" href="style.css">
+ 	<meta name=viewport content='width=1080'>
+	<title>Jdblambert98</title>
+	<link rel="shortcut icon" href="favicon1.jpg" />
+</head>
+<body><div id="container">
+	<header>Welcome to<br>Jdblambert98's site.</header>
+	<div id="content"><div id="contentgrow">
+	<p1>Hello, you have found yourself on my site. Congratulations. There is not much here but I might work on that.  I don't know.  I've pretty much lost all motivation. Don't really know what to add or change.</p1><br>
+	<p2>I think that it is worth noting that I am learning to write html and css so if this isn't compatible with your browser, please
+	remember that this is just an early work in progress.</p2><br>
+</div></div>
+<footer>
+	<p1>Links to cool places.</p1><br>
+	<p2><a href="http://jdblambert98.ryansw.com/test.html">Other Page</a></p2><br>
+	<p3><a href="http://ryansw.com/">RyanSW</a><br>
+	<p4><a href="http://zaqattack.ryansw.com">Zaqattack</a>
+</footer>
+</div></body>
+</html>
+
