--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 </div></div>
 <footer>
 	<p1>Links to cool places.</p1><br>
-	<p2><a href="http://jdblambert98.ryansw.com/test.html">Other Page</a></p2><br>
+	<p2><a href="http://jdblambert.com/test.html">Other Page</a></p2><br>
 	<p3><a href="http://ryansw.com/">RyanSW</a><br>
-	<p4><a href="http://zaqattack.ryansw.com">Zaqattack</a>
 </footer>
 </div></body>
 </html>
