--- a/test.html
+++ b/test.html
@@ -17,9 +17,8 @@ function FirstFunction() {
 	<br><p5>Here, have a hamster.</p5>
 </div><footer>
 	<p1>Links to cool places.</p1><br>
-	<p2><a href="http://jdblambert98.ryansw.com/">Main Page</a></p2><br>
+	<p2><a href="http://jdblambert.com/">Main Page</a></p2><br>
 	<p3><a href="http://ryansw.com/">RyanSW</a><br>
-	<p4><a href="http://zaqattack.ryansw.com">Zaqattack</a>
 	
 </footer></div>
 
