--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <html>
  <head>
  <link rel="stylesheet" type="text/css" href="style.css">
- <title>jdblambert98.ryansw.com/</title>
+ <title>jdblambert.com/</title>
 	<link rel="shortcut icon" href="favicon1.jpg" />
 </head>
 <body><div id="container">
